--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.6.0",
     "react-paystack": "^6.0.0",
     "recharts": "^3.7.0",
     "resend": "^6.9.2",
